update about, contact, home, project, skills

--- a/public/index.html
+++ b/public/index.html
@@ -19,4 +19,5 @@
   </body>
 
   <script src="https://kit.fontawesome.com/1c1fe6136b.js" crossorigin="anonymous"></script>
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 </html>
