update index.html title and content

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This's Elvina Portfolio made by React. Hopefully you would love it!!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Portfolio by Elvina</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
